Refactor from services to optional dependencies